# cocoon

benchmark/: quality_eval.py  simple_translate.py  translate.py  translation_benchmark.py
docs/: deployment.md
mt-tools/scripts/: quality_eval.py
mt-tools/src/mt/: translate.py
runners/: BaseRunner.cpp
runners/client/: ClientRunningRequest.cpp  ClientRunningRequest.h
runners/helpers/: SimpleJsonSerializer.hpp
runners/proxy/: ProxyClientInfo.h  ProxyRunner.cpp  ProxyRunner.hpp  ProxyRunningRequest.cpp  ProxyRunningRequest.hpp  ProxyStats.h  ProxyWorkerConnectionInfo.h
runners/worker/: WorkerProxyInfo.cpp  WorkerRunningRequest.cpp  WorkerRunningRequest.hpp
scripts/: cocoon-launch
tee/: CMakeLists.txt
tee/cocoon/: FwdProxy.cpp  RevProxy.cpp  health-client.cpp  health-monitor.cpp  health-render.cpp  health-render.h  tdx-eventlog.cpp  tdx-eventlog.h  tdx-info.cpp  tdx.cpp  utils.cpp  utils.h
tee/test/: cocoon.cpp
tl/generate/scheme/: cocoon_api.tl  cocoon_api.tlo
